--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,17 +13,28 @@ on:
         - release
         
 jobs:
-  detect-branch:
-    runs-on: ubuntu-latest
+    detect-branch:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Get Your Code
-        uses: actions/checkout@v4
+        steps:
+          - name: Get Your Code
+            uses: actions/checkout@v4
 
-      - name: Say Hello Develop
-        if: ${{ github.ref == 'refs/heads/develop'}}
-        run: echo "Hello, develop!"
+          - name: Say Hello Develop
+            if: ${{ github.ref == 'refs/heads/develop'}}
+            run: echo "Hello, develop!"
 
-      - name: Say Hello Main
-        if: ${{ github.ref == 'refs/heads/main'}}
-        run: echo "Hello, main!"
+          - name: Say Hello Main
+            if: ${{ github.ref == 'refs/heads/main'}}
+            run: echo "Hello, main!"
+
+    detect-pr:
+        runs-on: ubuntu-latest
+
+        steps:
+          - name: Get Your Code
+            uses: actions/checkout@v4
+
+          - name: PR
+            if: github.event_name == 'pull_request'
+            run: echo "hello pull request"
